<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="space.bobcheng.myapplication.SignInActivity"
        android:background="@drawable/bg">

        <EditText

            android:id="@+id/username"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/passwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <EditText
            android:id="@+id/passwd"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:ems="10"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintHorizontal_bias="0.503"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/sign_in"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="127dp"
            android:layout_height="126dp"

            android:layout_marginBottom="67dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="..."
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/appicon"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up"
            android:textColor="@android:color/darker_gray"
            android:textSize="13sp"
            android:id="@+id/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="68dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>
    <LinearLayout
        android:id="@+id/logging"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circleshape_white"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="正在登录"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
</FrameLayout>

